# cmd-txtreplace

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: expected.txt  file.txt  original.txt
headers/: IProcessor.hpp  Processor.hpp  ProcessorFactory.hpp
src/: Processor.cpp  Processor.hpp  ProcessorFactory.cpp
test/: CMakeLists.txt  main.cpp  outputFileTest.cpp
